--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   zookeeper:
-    image: docker.io/bitnami/zookeeper:3.8
+    image: docker.io/bitnami/zookeeper
     ports:
       - "2181:2181"
     volumes:
@@ -10,7 +10,7 @@ services:
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
   kafka:
-    image: docker.io/bitnami/kafka:2.8
+    image: docker.io/bitnami/kafka
     ports:
       - "9092:9092"
     volumes:
@@ -23,13 +23,13 @@ services:
       - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka:9093,EXTERNAL://localhost:9092
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT
     depends_on:
-      - zookeeper
+      - kafka-ui
   kafka-ui:
     image: provectuslabs/kafka-ui
     hostname: kafka-ui
     container_name: kafka_ui
     depends_on:
-      - kafka
+      - zookeeper
     ports:
       - "8080:8080"
     environment:
