--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,4 +1,4 @@
 scrape_configs:
   - job_name: 'crypto_producer'
     static_configs:
-      - targets: ['localhost:8000']
+      - targets: ['crypto-producer:8000']
