--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   zookeeper:
     image: docker.io/bitnami/zookeeper
@@ -36,6 +34,16 @@ services:
       DYNAMIC_CONFIG_ENABLED: "true"
       KAFKA_CLUSTERS_0_NAME: kafkacluster
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "kafka:9092"
+
+  kafka-exporter:
+    image: bitnami/kafka-exporter:latest
+    ports:
+      - "9308:9308"
+    environment:
+      - KAFKA_BROKERS=kafka:9092
+      - KAFKA_VERSION=2.7.0
+    depends_on:
+      - kafka
 
   spark-master:
     image: bitnami/spark:latest
@@ -103,6 +111,7 @@ services:
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     depends_on:
+      - kafka-exporter
       - crypto-producer
     ports:
       - "9090:9090"
