--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,4 +1,8 @@
 scrape_configs:
+  - job_name: 'kafka'
+    static_configs:
+      - targets: ['kafka-exporter:9308']
+
   - job_name: 'crypto_producer'
     static_configs:
       - targets: ['crypto-producer:8000']
