--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,7 +123,8 @@ services:
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=admin
     volumes:
-      - grafana_data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
     depends_on:
       - prometheus
 
@@ -131,6 +132,4 @@ volumes:
   zookeeper_data:
     driver: local
   kafka_data:
-    driver: local
-  grafana_data:
     driver: local
