--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,3 +6,7 @@ scrape_configs:
   - job_name: 'crypto_producer'
     static_configs:
       - targets: ['crypto-producer:8000']
+
+  - job_name: 'spark_consumer'
+    static_configs:
+      - targets: ['spark-consumer:8001']
