--- a/Dockerfile-crypto-producer
+++ b/Dockerfile-crypto-producer
@@ -5,16 +5,18 @@ FROM python:3.12-slim
 WORKDIR /app
 
 # Copier le fichier requirements.txt dans le conteneur
-COPY requirements.txt .
+COPY src/crypto-kafka/requirements.txt .
 
 # Installer les dépendances Python
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copier le script crypto_producer.py dans le conteneur
-COPY src/crypto-kafka/crypto_producer.py .
+COPY src/ .
 
 # Exposer le port pour Prometheus
 EXPOSE 8000
 
+ENV PYTHONPATH="/app"
+
 # Définir la commande par défaut pour exécuter le script
-CMD ["sh", "-c", "sleep 10 && python -u crypto_producer.py"]
+CMD ["sh", "-c", "sleep 10 && python -u crypto-kafka/crypto_producer.py"]
