--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,20 @@ services:
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
 
+  schema-registry:
+    image: confluentinc/cp-schema-registry:7.3.0
+    hostname: schema-registry
+    container_name: schema-registry
+    depends_on:
+      - kafka
+      - zookeeper
+    ports:
+      - "8082:8081"  # Changé de 8081:8081 à 8082:8081
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'kafka:9092'
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
+
   kafka:
     image: docker.io/bitnami/kafka
     ports:
@@ -28,12 +42,16 @@ services:
     container_name: kafka_ui
     depends_on:
       - zookeeper
+      - kafka
+      - schema-registry
     ports:
       - "8080:8080"
     environment:
       DYNAMIC_CONFIG_ENABLED: "true"
       KAFKA_CLUSTERS_0_NAME: kafkacluster
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "kafka:9092"
+      KAFKA_CLUSTERS_0_SCHEMAREGISTRY: "http://schema-registry:8081"
+
 
   kafka-exporter:
     image: bitnami/kafka-exporter:latest
@@ -83,8 +101,11 @@ services:
     depends_on:
       - kafka
       - zookeeper
+      - schema-registry
     ports:
       - "8000:8000"
+    environment:
+      - SCHEMA_REGISTRY_URL=http://schema-registry:8081
 
   spark-consumer:
     build:
